# django-project-template

./: .coveragerc  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
.dev/: run_clean_code.sh  run_createsuperuser.sh  run_dev.sh  run_docker_nuke.sh  run_migrations.sh  run_tests.sh
.github/workflows/: pre-commit.yml
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py
docker/: dev.Dockerfile  postgres_healthcheck.sh
myapp/: admin.py  apps.py  authentication.py  forms.py
myapp/api/: base.py  exceptions.py  response.py  urls.py
myapp/api/views/: auth.py
myapp/common/: exceptions.py
myapp/common/utils/: converters.py
myapp/migrations/: 0001_initial.py
myapp/models/: __init__.py  user.py
myapp/models/abstracts/: __init__.py  base.py
myapp/serializers/: auth.py
myapp/serializers/models/: user.py
tests/: factories.py  test_authentication.py
tests/api/: test_base.py  test_exceptions.py  test_response.py
tests/api/views/: test_auth.py
tests/common/utils/: test_converters.py
tests/models/: test_user.py
tests/models/abstracts/: test_base.py
tests/serializers/: test_auth.py
tests/testutils/: mixins.py
